force-app/main/default/objects/CancellationCaseSetting__c/CancellationCaseSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object contains values for Case creation based on Category</description>
    <label>Cancellation Case Setting</label>
</CustomObject>