force-app/main/default/objects/CancellationCaseSetting__c/fields/Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Status__c</fullName>
    <description>This field will hold the status of the cancellation record for particular category type and will be used to create the cases accordingly.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the status of the cancellation record for particular category type and will be used to create the cases accordingly.</inlineHelpText>
    <label>Cancellation Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>