force-app/main/default/objects/CancellationCaseSetting__c/fields/Case_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>