force-app/main/default/objects/CancellationCaseSetting__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>